Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignObjectNumObjField.quorum
class Main
    Number v
    action Main
        v:SetValue(5.0)
        Test(v)
    end

    action Test(Object var)
        Number value = cast(Number, var)
        if value:GetValue() = 5.0
            output "passed"
        end
    end
end
