Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBoolObjNumObj.quorum
class main
    action Main
        Number n
        Boolean bool
        n:setValue(7.5)
        bool = cast(Boolean, n)
    end
end